crates/aiken-lang/src/snapshots/windows_newline.snap
---
source: crates/aiken-lang/src/parser.rs
description: "Code:\n\nuse aiken/list\r\n"
---
Module {
    name: "",
    docs: [],
    type_info: (),
    definitions: [
        Use(
            Use {
                as_name: None,
                location: 0..14,
                module: [
                    "aiken",
                    "list",
                ],
                package: (),
                unqualified: (
                    14,
                    [],
                ),
            },
        ),
    ],
    lines: LineNumbers {
        line_starts: [
            0,
            16,
        ],
        length: 16,
        last: Some(
            16,
        ),
    },
    kind: Validator,
}
